Release Phase #3: General Rollout (#5)
Features completed:
- StreamFileOperations (server streaming)
- UploadFiles (client streaming)
- LiveFileProcessing (bidirectional streaming)
- WorkflowExecutorService integration
- Error handling for FileTask isolation
- Per-operation metrics implementation

Added detailed sections:
- To-do list organized by feature area
- Progress tracking for completed items
- Clear milestones with deliverables
- Phase-wise development plan

Next phase focus:
- Monitoring and metrics integration
- Production readiness improvements
- Enhanced observability features

Phases marked as DELIVERED:
- Phase 1: Core Unary Processing
- Phase 2: Concurrency & Workflow
- Phase 3: Streaming Endpoints

Current phase (Phase 4) outlined with specific tasks for monitoring and metrics implementation.